fixed some layout issues and added a query to see total task hours by family

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -176,7 +176,7 @@ nav {
       position: absolute;
       display: block;
       right: 0;
-      top: 1em;
+      top: 0;
     }
 
     li {
